# Ghostship

./: .gitmodules
.github/workflows/: buildroot.yml
ansible/ghostship/defaults/: main.yml
ansible/ghostship/handlers/: main.yml
ansible/ghostship/tasks/: main.yml  network.yml  network_armbian_cleanup.yml  network_systemd-networkd.yml  printernet.yml
ansible/ghostship/templates/: dnsmasq.conf
ansible/ghostship/tests/: test.yml
ansible/ghostship/vars/: main.yml
client/: NOTES.md  pyproject.toml
docs/: mgmt.md  state.md
os/: pc-buildroot.config  pc-linux.config  pi3-buildroot.config
os/fritte/: buildroot.config  kernel.config
os/ghostship/: Config.in  external.desc  external.mk
os/ghostship/configs/: ghostship_pc_defconfig  ghostship_pi3_defconfig  ghostship_qemu_x64_defconfig
os/ghostship/package/moonraker/: Config.in  moonraker.hash  moonraker.mk
os/ghostship/package/python-enum34-ghostship/: Config.in  python-enum34-ghostship.hash  python-enum34-ghostship.mk
os/ghostship/package/python-inotifysimple/: Config.in  python-inotifysimple.hash  python-inotifysimple.mk
os/ghostship/package/python-klipper/: Config.in  python-klipper.hash  python-klipper.mk
os/ghostship/package/python-libnacl/: Config.in  python-libnacl.hash  python-libnacl.mk
os/ghostship/package/python-msgspec/: Config.in  python-msgspec.hash  python-msgspec.mk
os/ghostship/package/python-poetry-core/: 0001-git.patch  Config.in  python-poetry-core.hash  python-poetry-core.mk
os/ghostship/uboot/: rpi3.config
poc/: notes.md
poc/filebucket/: README
(+9 files in other folders)
